--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "botkit": "^0.2.0"
+    "botkit": "~0.2.0"
   },
   "engines": {
     "node": "5.10.1"
